[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Florian Rohrer <semicolonator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.2"
regex = "^2023.10.3"
more-itertools = "^10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
